--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
 
     <div class=" back">
         <br>
-        <center>
-            <h2 class="titulo"> {$titulo} </h2>
-        </center>
+        <h2 class="titulo"> {$titulo} </h2>
         <table>
             <tr>
                 <td colspan="2">
-                    <div align="center"><strong>Ingresos</strong></div>
+                    <div><strong>Ingresos</strong></div>
                 </td>
             </tr>
             <tr>
@@ -75,8 +73,7 @@
                 <td>* </td>
             </tr>
             <tr>
-                <td colspan="2" align=center><a href="ps_salir.php">Salir</a></td>
-
+                <td colspan="2"><a href="ps_salir.php">Salir</a></td>
             </tr>
         </table>
     </div>
